--- a/_style/scss/patterns/offcanvas.scss
+++ b/_style/scss/patterns/offcanvas.scss
@@ -88,6 +88,7 @@ body {
     clear: both;
     background-color: $color-dark-gray;
     width: 100%;
+    text-transform: uppercase;
     }
 
 .js-offcanvas .nav-global-primary .nav-tier2 {
@@ -96,6 +97,8 @@ body {
 
 .js-offcanvas .nav-global-secondary .nav-tier2 {
 	border-bottom: none;
+	border-top: 1px solid #555;
+	border-bottom: 1px solid #555;
 	}
 
 .js-offcanvas .nav-global-primary ul {
